Final (for project)

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         </table>
         <div class="loading-message" style="text-align: center; margin-top: 1em; display: none;">Loading matches...</div>
-        <div class="empty-message" style="text-align: center; margin-top: 1em; display: none;">No matches found.</div>
+        <div class="empty-message" style="text-align: center; margin-top: 1em; display: none;">No match found.</div>
     </div>
 
     <h2>Teams</h2>
@@ -78,6 +78,7 @@
 
         </div>
 
+        <h3></h3>
         <table>
 
         <!------ this is included using JS and backend ----------
@@ -94,7 +95,7 @@
         ---------------------------------------------------------->
 
         </table>
-        <div class="loading-message" style="text-align: center; margin-top: 1em; display: none;">Loading matches...</div>
+        <div class="loading-message" style="text-align: center; margin-top: 1em; display: none;">Loading team data...</div>
     </div>
 
     <h2>Matches</h2>
